# pvr.mythtv

./: .travis.yml  CMakeLists.txt  README.md  index.html  params.json
debian/: changelog  control  copyright  rules  xbmc-pvr-mythtv.install
download/: index.html
kodi/: CMakeLists.txt  refresh_kodi.sh
kodi/platform/: CMakeLists.txt
lib/cppmyth/: CMakeLists.txt
lib/cppmyth/src/private/platform/windows/: os-types.h
lib/kodi/: CMakeLists.txt  refresh_kodi.sh
lib/platform/: CMakeLists.txt  refresh_platform.sh
lib/xbmc/: CMakeLists.txt
manual/: index.html
pvr.mythtv/: addon.xml  changelog.txt
pvr.mythtv/resources/language/English/: strings.po
pvr.mythtv/resources/language/French/: strings.po
pvr.mythtv/resources/language/French (Canada)/: strings.po
pvr.mythtv/resources/language/Hebrew/: strings.po
pvr.mythtv/resources/language/Spanish (Argentina)/: strings.po
src/: avinfo.cpp  client.cpp  client.h  demux.cpp  demux.h  fileOps.h  pvrclient-mythtv.cpp  pvrclient-mythtv.h  tools.h
src/cppmyth/: MythProgramInfo.cpp  MythProgramInfo.h  MythScheduleHelper75.cpp  MythScheduleHelper75.h  MythScheduleHelper76.cpp  MythScheduleHelper85.cpp  MythScheduleHelperNoHelper.cpp  MythScheduleHelperNoHelper.h  MythScheduleManager.cpp  MythScheduleManager.h
src/demuxer/: tsDemuxer.h
xbmc/: CMakeLists.txt
xbmc/platform/: CMakeLists.txt
